added all customer fields into register component

--- a/src/main/frontend/bank-frontend/package.json
+++ b/src/main/frontend/bank-frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "roboto-fontface": "*",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5",
