--- a/src/main/frontend/bank-frontend/package.json
+++ b/src/main/frontend/bank-frontend/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "roboto-fontface": "*",
-    "vue": "^3.4.15",
+    "vue": "^3.4.21",
     "vue-router": "^4.2.5",
-    "vuetify": "^3.0.0-beta.0",
+    "vuetify": "^3.5.13",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
